kubernetes/k8s/ingress/sa-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sa-ingress-frontend
  annotations:
    kubernetes.io/ingress.class: nginx
    # ingress.kubernetes.io/add-base-url: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: sa-frontend
          servicePort: 80
spec:
  rules:
  - http:
      paths:
      - path: /sentiment
        backend:
          serviceName: sa-web-app
          servicePort: 80
